qinglong/yml/zbzw-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: zbzw-cf-cdn-origin
  namespace: kt-zbzw
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cf-cdn-origin
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    kubesphere.io/creator: admin
spec:
  tls:
    - hosts:
        - www-zbzw.qinglong.cdn-origin.uk
        - m-zbzw.qinglong.cdn-origin.uk
      secretName: zbzw-cf-cdn-origin
  rules:
    - host: www-zbzw.qinglong.cdn-origin.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: www
                port:
                  number: 8080
    - host: m-zbzw.qinglong.cdn-origin.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wap
                port:
                  number: 8080
